kubernetes/deployment.yml
# Deployment que contiene ambas aplicaciones en el mismo pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aplicacion
  labels:
    app: aplicacion
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aplicacion
  template:
    metadata:
      labels:
        app: aplicacion
    spec:
      containers:
      # Contenedor de la aplicación legacy
      - name: app-legacy
        image: final_ds-app-legacy:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
      - name: new-microservice
        image: final_ds-new-microservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
