kubernetes/legacy-app_deployment.yml
# archivo de despliegue para la aplicación legacy
# 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-legacy
  labels:
    app: apps
    component: legacy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apps
      component: legacy
  template:
    metadata:
      labels:
        app: apps
        component: legacy
    spec:
      containers:
      - name: app-legacy
        image: final_ds-app-legacy:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
