kubernetes/new-microservice_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-microservice
  labels:
    app: new-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: new-microservice
  template:
    metadata:
      labels:
        app: new-microservice
    spec:
      containers:
      - name: new-microservice
        image: final_ds-new-microservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: new-microservice-service
spec:
  selector:
    app: new-microservice
  ports:
    - port: 5001
      targetPort: 5001
  type: ClusterIP
