kubernetes/service.yml
# Servicio que maneja ambas aplicaciones (monolitica y microservicio)
apiVersion: v1
kind: Service
metadata:
  name: apps-service
spec:
  selector:
    app: apps
  ports:
    - name: legacy-port
      port: 5000
      targetPort: 5000
      protocol: TCP
    - name: microservice-port
      port: 5001
      targetPort: 5001
      protocol: TCP
    - name: http
      port: 80
      targetPort: 5000  # Por defecto apunta a legacy
      protocol: TCP
  type: ClusterIP
