kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: apps-service
            port:
              number: 5000  # Puerto de la aplicación legacy
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: apps-service
            port:
              number: 5001  # Puerto del microservicio
